<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.amtodolist.activities.MainActivity">
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/delete"
        android:orderInCategory="100"
        android:tint="@color/action_icon_color"
        android:title="@string/action_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_complete_tasks"
        android:icon="@drawable/tasks_completed_all"
        android:orderInCategory="100"
        android:tint="@color/action_icon_color"
        android:title="@string/action_complete_tasks"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_undo_tasks"
        android:icon="@drawable/undo_complete_tasks"
        android:orderInCategory="100"
        android:tint="@color/action_icon_color"
        android:title="@string/action_undo_tasks"
        app:showAsAction="always" />
</menu>